Enhancement: composer setup

--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,40 @@
 {
-    "name":"pear/cache_lite",
-    "type":"library",
-    "description":"Fast and safe little cache system",
-    "keywords":[ "cache" ],
-    "homepage":"https://github.com/pear/Cache_Lite",
-    "license":"LGPL",
-    "authors":[
+    "name": "pear/cache_lite",
+    "type": "library",
+    "description": "Fast and safe little cache system",
+    "keywords": [
+        "cache"
+    ],
+    "homepage": "https://github.com/pear/Cache_Lite",
+    "license": "LGPL",
+    "authors": [
         {
-            "name":"Markus Tacker",
-            "homepage":"http://pear.php.net/user/tacker"
+            "name": "Markus Tacker",
+            "homepage": "http://pear.php.net/user/tacker"
         },
         {
-            "name":"Fabien Marty",
-            "homepage":"http://pear.php.net/user/fab"
+            "name": "Fabien Marty",
+            "homepage": "http://pear.php.net/user/fab"
         }
     ],
-    "require":{
-        "php":">=4.0.0",
-        "pear/PEAR":">=1.5.4"
+    "require": {
+        "php": ">=4.0.0",
+        "pear/PEAR": ">=1.5.4",
+        "pear/pear_exception": "*"
     },
-    "autoload":{
-        "classmap":[ "Cache/Lite.php" ]
+    "autoload": {
+        "classmap": [
+            "Cache/Lite.php"
+        ]
+    },
+    "include-path": [
+        "./"
+    ],
+    "support": {
+        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Cache_Lite",
+        "source": "https://github.com/pear/Cache_Lite"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "*"
     }
 }
