--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "classmap": [
             "Cache/Lite.php",
             "Cache/Lite/Output.php",
-            "Cache/Lite/NestedOutput.php"
+            "Cache/Lite/NestedOutput.php",
             "Cache/Lite/Function.php",
             "Cache/Lite/File.php"
         ]
