--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=4.0.0",
-        "pear/pear_exception": "*"
+        "php": ">=4.0.0"
     },
     "psr-0": {
         "Cache": "./"
