--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: php
+
+before_install:
+  - pear upgrade pear
+
 install:
   - pear install package.xml
+
 php:
   - 5.4
-  - 5.3
+  - 5.5
+  - 5.6
+  - 7.0
+
 script: phpunit tests/
