--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
         "source": "https://github.com/pear/Cache_Lite"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.3.0"
+        "phpunit/phpunit": "^4"
     }
 }
