Pin PHPUnit to v4 make tests run on PHP 5.5 and 7

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
         "source": "https://github.com/pear/Cache_Lite"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "^4"
     }
 }
